added the basic banner section

--- a/index.html
+++ b/index.html
@@ -4,13 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exclusive Travels</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <header>
+        <nav>
+            <label>
+                <label class="brand-logo">
+                    <img src="Images/Group 40071 (2).png" alt="">
+                </label>
+                <label class="nav-title">
+                    <h3><span class="exclu-sive">Exclusive</span> <span class="travels">Travels</span></h3>
+                </label>
+            </label>
+            <ul>
+                <li><a class="active" href="">Home</a> </li>
+                <li><a href="">Packages</a></li>
+                <li><a href="">Testimonial</a></li>
+                <li> <a href="">Blog</a></li>                
+                <li><a href="">Contact</a></li>
+            </ul>
+        </nav>
+        <section class="banner">
+            <h1 class="travel">Explore Your Travel</h1>
+            <p class="text-description-color">Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor adipiscing. In et odio enim ac quis sapien urna eu phasellus.</p>
+            <button class="btn-primary">Where Go</button>
+            <button class="btn-primary">When <img class="icons" src="Images/icons/download.png" alt=""></button>
+            <button class="btn-primary">Select Type<img class="icons" src="Images/icons/download.png" alt=""></button>
+            <button class="btn-primary1"><img class="icons1" src="Images/icons/search.png" alt=""> Find Now</button>
+        </section>
 
     </header>
     <main>
-        
+
     </main>
     <footer>
 
