added the background images

--- a/index.html
+++ b/index.html
@@ -28,10 +28,12 @@
         <section class="banner">
             <h1 class="travel">Explore Your Travel</h1>
             <p class="text-description-color">Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor adipiscing. In et odio enim ac quis sapien urna eu phasellus.</p>
-            <button class="btn-primary">Where Go</button>
-            <button class="btn-primary">When <img class="icons" src="Images/icons/download.png" alt=""></button>
-            <button class="btn-primary">Select Type<img class="icons" src="Images/icons/download.png" alt=""></button>
-            <button class="btn-primary1"><img class="icons1" src="Images/icons/search.png" alt=""> Find Now</button>
+            <div class="button">
+                <button class="btn-primary">Where Go</button>
+                <button class="btn-primary">When <img class="icons" src="Images/icons/download.png" alt=""></button>
+                <button class="btn-primary">Select Type<img class="icons" src="Images/icons/download.png" alt=""></button>
+                <button class="btn-primary1"><img class="icons1" src="Images/icons/search.png" alt=""> Find Now</button>
+            </div>
         </section>
 
     </header>
