--- a/index.html
+++ b/index.html
@@ -26,19 +26,36 @@
             </ul>
         </nav>
         <section class="banner">
-            <h1 class="travel">Explore Your Travel</h1>
-            <p class="text-description-color">Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor adipiscing. In et odio enim ac quis sapien urna eu phasellus.</p>
-            <div class="button">
-                <button class="btn-primary">Where Go</button>
-                <button class="btn-primary">When <img class="icons" src="Images/icons/download.png" alt=""></button>
-                <button class="btn-primary">Select Type<img class="icons" src="Images/icons/download.png" alt=""></button>
-                <button class="btn-primary1"><img class="icons1" src="Images/icons/search.png" alt=""> Find Now</button>
+            <div class="banner-content">
+                <h1 class="travel">Explore Your Travel</h1>
+                <p class="text-description-color"id="text-description" >welcome to you and your family our travle area, we are very much plased for your comming,enjoy travle & have a nice day.</p>
+            </div>
+                <div class="button">
+                    <button class="btn-primary">Where Go</button>
+                    <button class="btn-primary">When <img class="icons" src="Images/icons/download.png" alt=""></button>
+                    <button class="btn-primary">Select Type<img class="icons" src="Images/icons/download.png" alt=""></button>
+                    <button class="btn-primary1"><img class="icons1" src="Images/icons/search.png" alt=""> Find Now</button>               
             </div>
         </section>
-
     </header>
+    <!-- start main section -->
     <main>
-
+        <section class="popular-tours">
+            <div class="popular-tours-contant">
+                <h2>Our Popular Tours</h2>
+                <p class="text-description-color1" id="text-measurment">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+                <ul class="text-description-color1">
+                    <li class="text-measurment2">Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam odio neque diam. Sociis erat at .</li>
+                    <li class="text-measurment2">Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse nullam.</li>
+                    <li class="text-measurment2"> Accumsan eget et turpis praesent lorem egestas enim elit bibendum. Risus at in.</li>
+                </ul>
+                <p class="text-description-color1" id="text-measurment1">Amet consectetur. Vulputate commodo felis molestie ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. Id bibendum nunc senectus semper tincidunt. </p>
+                <button class="btn-primary11">Read More</button>
+            </div>
+            <div class="tours-image">
+                <img src="Images/Rectangle 4.png" alt="">
+            </div>
+        </section>
     </main>
     <footer>
 
