added the footer section

--- a/index.html
+++ b/index.html
@@ -39,10 +39,11 @@
         </section>
     </header>
     <!-- start main section -->
+    <!-- popular toure section -->
     <main>
         <section class="popular-tours">
             <div class="popular-tours-contant">
-                <h2>Our Popular Tours</h2>
+                <h2 class="popular-tours-title">Our Popular Tours</h2>
                 <p class="text-description-color1" id="text-measurment">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
                 <ul class="text-description-color1">
                     <li class="text-measurment2">Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam odio neque diam. Sociis erat at .</li>
@@ -56,9 +57,35 @@
                 <img src="Images/Rectangle 4.png" alt="">
             </div>
         </section>
+<!-- Destination section -->
+        <section>
+            <div class="choose-destination">
+                <h2 class="destination-title">Choose Your Destination</h2>
+                <p class="text-description-color1" id="destnation-text">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+            </div>
+        </section>
     </main>
     <footer>
-
+            <div class="footer">
+                    <label class="brand-logo1">
+                        <label>
+                            <img src="Images/Group 40071 (2).png" alt="">
+                        </label>
+                        <label class="footer-title">
+                            <h3><span class="exclu-sive">Exclusive</span> <span class="travels">Travels</span></h3>
+                        </label>
+                    </label>
+                    <label class="footer-description">
+                        <p class="text-description-color1">Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate. Leo erat maecenas vitae elementum ultricies nullam.</p> 
+                    </label>
+                    <label class="footer-icon">
+                        <img src="Images/icons/twitter.png" alt="">
+                        <img src="Images/icons/facebook.png" alt="">
+                        <img src="Images/icons/insta.png"alt="">
+                    </label>                     
+                <hr>
+                <p>2017, All Rights Reserved.</p>
+            </div>
     </footer>
 </body>
 </html>
