added the footer section

--- a/index.html
+++ b/index.html
@@ -63,6 +63,26 @@
                 <h2 class="destination-title">Choose Your Destination</h2>
                 <p class="text-description-color1" id="destnation-text">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
             </div>
+            <div>
+                <div class="grid-wrapper">
+                    <img src="Images/Rectangle 5.png" alt="">
+                </div>
+                <div>
+                    <img src="Images/Rectangle 8.png" alt="">
+                </div>
+                <div>
+                    <img src="Images/Rectangle 6.png" alt="">
+                </div>
+                <div>
+                    <img src="Images/Rectangle 9.png" alt="">
+                </div>
+                <div>
+                    <img src="Images/Rectangle 11.png" alt="">
+                </div>
+                <div>
+                    <img src="Images/Rectangle 10.png" alt="">
+                </div>
+            </div>
         </section>
     </main>
     <footer>
@@ -84,7 +104,7 @@
                         <img src="Images/icons/insta.png"alt="">
                     </label>                     
                 <hr>
-                <p>2017, All Rights Reserved.</p>
+                <p class="copy-rights">2017, All Rights Reserved.</p>
             </div>
     </footer>
 </body>
